Version 1.7.0+git:
   * Added support for flag_icon, defeat_condition, scroll_to_leader, lost,
     village_support, recruit and hidden to [show_side_debug]
   * side.color is now handled by a text box in [show_side_debug]
   * Various layout corrections in [show_side_debug] and [show_quick_debug]

Version 1.7.0
   * Removed file ai_helper.lua.
   * Rewritten [get_numerical_minimum] and [get_numerical_maximum]
   * Completely reworked layout and code of HTML readme
   * Enabled Pango markup in [alert], [confirm], [prompt] and [item_dialog]
   * Added [loot] tag, by Elvish_Hunter
   * Added [choice_box] tag, by Elvish_Hunter
   * Bumped Wesnoth version requirement to 1.11.9
   * Fixed a bug in color selection that made [show_side_debug] not working
   * Better indentation of the gui-tags.lua file

Version 1.6.0:
   * Added [earthquake], by Elvish_Hunter.
   * Rewitten [narrate], to add support of all the additional tags and keys
     supported by [message]
   * Added inline StandardSideFilter support to [store_shroud] and [set_shroud].
   * Added color slider to [show_side_debug].
   * Bumped Wesnoth version requirement to 1.11.0

Version 1.5.0:
   * Now [item_dialog] always requires take_string= and leave_string= keys.
   * Added utils.get_text_input function, by SigurdFireDragon.
   * Added Lua remakes of Javascript's standard dialogs: [alert], [confirm] and
     [prompt], by Elvish_Hunter.
   * Added ai_helper.lua file, by mattsc.
   * Added [random_number] and [get_recruit_list], by Elvish_Hunter.
   * Added support for interval= key to all the [fade_*] tags.

Version 1.4.0:
   * Made it so that [unknown_message] is able to take duration=, side_for=,
      and sound=.
   * Added [item_dialog], [reverse_value] and [whisper], by Elvish_Hunter.
   * Removed [find_path], as it is in core from 1.9.9+svn.
   * [poison] cannot longer poison non living units.
   * Added two support functions for handling strings (split and chop), and
     used them in gui-tags.lua.
